--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemall.pos",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,8 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.8.1",
-    "mongoose": "^6.5.1",
-    "nodemon": "^2.0.19"
+    "mongodb": "^4.8.1"
   }
 }
