--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "pokemall.pos",
   "version": "1.0.0",
-  "description": "",
+  "description": "PokeMall is a shopping site that welcomes anyonw who loves to purchase Pokemon",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "flickity": "^3.0.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YPhuong15/Shopping-Paying-on-Site.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YPhuong15/Shopping-Paying-on-Site/issues"
+  },
+  "homepage": "https://github.com/YPhuong15/Shopping-Paying-on-Site#readme"
 }
